--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <title>Kayıt Ol</title>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDqEtLseUUkVgOETI4SxKnagY2d1M77Azc&callback=initMap&libraries=places" async defer></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=(key)&callback=initMap&libraries=places" async defer></script>
     <link rel="stylesheet" href="/css/reg.css">
 </head>
 <body>
