--- a/src/main/resources/templates/ShowactivityonMap.html
+++ b/src/main/resources/templates/ShowactivityonMap.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Show Activity on Map</title>
-        <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDqEtLseUUkVgOETI4SxKnagY2d1M77Azc&callback=initMap&libraries=places"></script>
+        <script async defer src="https://maps.googleapis.com/maps/api/js?key=(key)&callback=initMap&libraries=places"></script>
     <style>
         #map {
             height: 500px; 
