--- a/src/main/resources/templates/ActivityRoute.html
+++ b/src/main/resources/templates/ActivityRoute.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <script async defer
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDqEtLseUUkVgOETI4SxKnagY2d1M77Azc"></script>
+        src="https://maps.googleapis.com/maps/api/js?key=(key)"></script>
 
     <style>
         #map {
